kubernetes/apps/tools/plik/app/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plik
spec:
  description: Restrict plik egress to the external gateway proxies.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: plik
      app.kubernetes.io/name: plik
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            k8s:app.kubernetes.io/managed-by: envoy-gateway
            k8s:gateway.envoyproxy.io/owning-gateway-name: envoy-external
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "10443"
              protocol: TCP
